@@ -3,6 +3,7 @@
 * Fixed battery alarm when measurement of current is missing.
 * Fixed spelling errors on "allow to" in plugins descriptions, and "GTK2+" to
     more correct "GTK+".
+* Fixed connection name dropdown list in netstatus plugin.
 
 0.10.0
 -------------------------------------------------------------------------
